Actions
Bug #13875
closedpanic in smb_is_same_user while importing dh handles
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
External Bug:
Description
Crashed observed while doing vm related operations after applying network ACL on the share.
> $C ffffd000f55fb840 smb_is_same_user+0x32(ffffd128b9b0be10, ffffd128a2414838) ffffd000f55fb890 smb2_dh_close_my_orphans+0xa9(ffffd12a8bf42680, ffffd128daf2e478) ffffd000f55fba10 smb_common_open+0xd1c(ffffd12a8bf42680) ffffd000f55fbaf0 smb2_dh_import_handle+0x35e(ffffd12a8bf42680, ffffd159664b6c00, 351172d857c57b4b) ffffd000f55fbb90 smb2_dh_import_share+0x1a8(ffffd12a8bf42680) ffffd000f55fbc20 taskq_d_thread+0xb7(ffffd1284faac470) ffffd000f55fbc30 thread_start+8()
Updated by Gordon Ross over 1 year ago
Repeated VM operations, no more crashes like this seen.
Updated by Electric Monk over 1 year ago
- Status changed from In Progress to Closed
- % Done changed from 0 to 100
git commit bf996dbc0ac2dc1920546631f0ce16c49371712f
commit bf996dbc0ac2dc1920546631f0ce16c49371712f Author: Prashanth Badari <prashanth.badari@tegile.com> Date: 2021-07-15T19:43:44.000Z 13875 panic in smb_is_same_user while importing dh handles Reviewed by: Suresh Jayaraman <sjayaraman@tintri.com> Reviewed by: Gordon Ross <gordon.ross@tintri.com> Reviewed by: Andrew Stormont <astormont@racktopsystems.com> Reviewed by: C Fraire <cfraire@me.com> Approved by: Garrett D'Amore <garrett@damore.org>
Actions