13875 panic in smb_is_same_user while importing dh handles Reviewed by: Suresh Jayaraman <sjayaraman@tintri.com> Reviewed by: Gordon Ross <gordon.ross@tintri.com> Reviewed by: Andrew Stormont <astormont@racktopsystems.com> Reviewed by: C Fraire <cfraire@me.com> Approved by: Garrett D'Amore <garrett@damore.org>